force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Total budget assigned</description>
    <inlineHelpText>Enter the allocated budget</inlineHelpText>
    <label>Budget</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>