force-app/main/default/objects/Project__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Current progress</description>
    <inlineHelpText>Enter completion percentage</inlineHelpText>
    <label>Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>