force-app/main/default/objects/Project__c/fields/ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectDescription__c</fullName>
    <description>Project scope and objectives</description>
    <inlineHelpText>Provide project description</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>