force-app/main/default/objects/Project__c/fields/ProjectOwner__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary person responsible</description>
    <inlineHelpText>Select the project owner</inlineHelpText>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>