force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>Priority__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>ProjectOwner__c</columns>
    <columns>Budget__c</columns>
    <columns>Department__c</columns>
    <columns>EndDate__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>